--- a/src/app/login/pct-login.component.html
+++ b/src/app/login/pct-login.component.html
@@ -1,6 +1,6 @@
 LOGIN TODO
 <br />
-You need to setup an bound to userName. <br />
+You need to setup an input bound to userName. <br />
 You need to setup a button with clickbound to loginhandler() <br />
 There already is some css, but you might want to make your own style <br />
 
